# docdoctor

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/api/: document.py  models.py  rag.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_tags_document_tags.py
backend/app/: main.py
backend/app/api/: document.py
backend/app/core/: config.py
backend/app/utils/: __init__.py  chunk.py  claude.py  embed.py  filestorage.py  lmstudio.py  parse.py
backend/core/: middleware.py  settings.py  urls.py
backend/prisma/: schema.prisma
backend/utils/: __init__.py  embed.py  lmstudio.py  openai.py  parse.py
backend_old/: .pre-commit-config.yaml  pyproject.toml
backend_old/api/: document.py  urls.py  views.py
backend_old/api/migrations/: 0003_document_size.py  0004_chunk.py
backend_old/core/: middleware.py
backend_old/utils/: __init__.py  chunk.py  claude.py  embed.py  openai.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: navigation.tsx
frontend/src/components/ui/: button.tsx  link.tsx
frontend/src/hooks/: use-api.ts  use-chat.ts  use-documents.ts
