[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.10",
    "django>=5.2.1",
    "djangorestframework>=3.16.0",
    "mysqlclient>=2.2.7",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]


[tool.black]
line-length =  79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]  # For compatibility with Black (optional)
